# haskell-programming-first-principles

./: .gitmodules  chapter10FoldingLists.hs  chapter11AlgebraicDatatypes.hs  chapter11Exercises.hs  chapter12SignalingAdversity.hs  chapter13BuildingProjects.hs  chapter14Testing.hs  chapter15Exercises.hs  chapter15MonoidSemigroup.hs  chapter5Types.hs  chapter6Typeclasses.hs  chapter7MoreFunctionalPatterns.hs  chapter8Recursion.hs  chapter9Lists.hs
chapter13Hangman/hangman/: hangman.cabal
chapter13Hangman/hangman/src/: Main.hs
chapter13Hangman/numberGuess/numberGuess/: numberGuess.cabal
chapter14Exercises/testing/: testing.cabal
chapter14Exercises/testing/src/: wordNumber.hs  wordNumberTest.hs
chapter14Projects/addition/: addition.cabal  addition.hs
chapter14Projects/morseCode/: morseCode.cabal
chapter14Projects/morseCode/src/: #Morse.hs#  Main.hs  Morse.hs
chapter14Projects/quickCheck/: quickCheck.cabal
chapter15Examples/orphan-instance/: listy.hs  listyInstances.hs
chapter15Examples/quickCheck/: quickCheck.cabal
chapter16Functor/: functorNotes.hs
chapter16Functor/exercises/: exercises.cabal
chapter17Applicative/applicative/: applicative.cabal
chapter18Monad/monad/: monad.cabal  stack.yaml
chapter19ApplyingStructure/applyingStructure/: applyingStructure.cabal
chapter20Foldable/foldable/: foldable.cabal
chapter21Traversable/traversable/: traversable.cabal
chapter22Reader/reader/: reader.cabal
chapter23State/state/: stack.yaml  state.cabal
chapter24Parser/parser/: parser.cabal  stack.yaml
parser/: parser.cabal
(+35 files in other folders)
